@@ -199,6 +199,21 @@ class S3(object):
 		response = self.send_request(request)
 		return response
 
+	def object_copy(self, src_uri, dst_uri, extra_headers = None):
+		if src_uri.type != "s3":
+			raise ValueError("Expected URI type 's3', got '%s'" % src_uri.type)
+		if dst_uri.type != "s3":
+			raise ValueError("Expected URI type 's3', got '%s'" % dst_uri.type)
+		headers = SortedDict()
+		headers['x-amz-copy-source'] = "/%s/%s" % (src_uri.bucket(), self.urlencode_string(src_uri.object()))
+		if self.config.acl_public:
+			headers["x-amz-acl"] = "public-read"
+		if extra_headers:
+			headers.update(extra_headers)
+		request = self.create_request("OBJECT_PUT", uri = dst_uri, headers = headers)
+		response = self.send_request(request)
+		return response
+
 	def object_info(self, uri):
 		request = self.create_request("OBJECT_HEAD", uri = uri)
 		response = self.send_request(request)
